--- a/config/cable.yml
+++ b/config/cable.yml
@@ -12,6 +12,15 @@ production:
   adapter: solid_cable
   connects_to:
     database:
-      writing: cable
+      writing: primary
   polling_interval: 0.1.seconds
   message_retention: 1.day
+
+## For SQLite3 use in production.
+# production:
+#   adapter: solid_cable
+#   connects_to:
+#     database:
+#       writing: cable
+#   polling_interval: 0.1.seconds
+#   message_retention: 1.day
